[package]
name = "app"
version = "1.0.0"
description = "herocast desktop app"
authors = ["herocast <3"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "updater", "devtools", "shell-open", "http-all", "system-tray", "icon-ico", "icon-png"] }
# tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features= ["postgres"] }
sentry-tauri = "0.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.
